--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
+  flutter_riverpod: ^2.3.0
   flutterfire_ui: ^0.4.3+20
   image_picker: ^0.8.7
   firebase_storage: ^11.0.16
