--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_mobile_ads: ^3.0.0
   yaml: ^3.1.2
   store_redirect: ^2.0.1
+  app_tracking_transparency: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
