--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,11 +51,11 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>위치정보 접근 권한이 필요합니다.</string>
+	<string>모임 개설 시 현재 위치를 특정하기 위한 위치정보 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>갤러리 접근 권한이 필요합니다.</string>
+	<string>사진 등록 혹은 변경을 위한 갤러리 접근 권한이 필요합니다.</string>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>사용자 맞춤 서비스 제공을 위한 권한이 필요합니다.</string>
+	<string>사용자 맞춤 서비스 및 광고 제공을 위한 권한이 필요합니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
