--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,11 +51,11 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>모임 개설 시 현재 위치를 특정하기 위한 위치정보 접근 권한이 필요합니다.</string>
+	<string>모임 개설 시 현재 위치를 특정하여 더 편리한 위치 설정을 지원하기 위해 위치정보 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진 등록 혹은 변경을 위한 갤러리 접근 권한이 필요합니다.</string>
+	<string>프로필 사진 등록 및 프로필 사진 변경 기능을 수행하기 위해 사진 라이브러리 접근 권한이 필요합니다. 등록하신 사진은 유저정보에 저장되며 언제든 변경할 수 있습니다.</string>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>사용자 맞춤 서비스 및 광고 제공을 위한 권한이 필요합니다.</string>
+	<string>사용자 맞춤 서비스 및 광고 제공을 위해 권한이 필요합니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
