--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   change_app_package_name: ^1.1.0
   firebase_analytics: ^10.4.5
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
